--- a/index.html
+++ b/index.html
@@ -10,18 +10,24 @@
 </head>
 
 <body>
-    <div id="pd-1">
-        <h2>SCHEMAT HORNERA W JS</h2>
-        <h4>Podaj stopień wielomianu</h4>
-        <label for="polynomialDeg">Stopień wielomianu</label>
-        <input type="number" min="0" id="polynomialDeg">
-        <br><br>
-        <button id="confirmPolynomialDeg">ZATWIERDŹ STOPIEŃ</button>
-        <div class="inputs"></div>
-        <br><br>
-        <button id="calculate">OBLICZ</button>
-        <button id="resetForm">RESETUJ</button>
+    <div class="flex-column">
+        <div class="flex-row">
+            <img src="./function1.png" alt="">
+            <button class="trapezoid">TRAPEZ</button>
+            <button class="simpson">SIMPSON</button>
+        </div>
+        <div class="flex-row">
+            <img src="./function2.png" alt="">
+            <button class="trapezoid">TRAPEZ</button>
+            <button class="simpson">SIMPSON</button>
+        </div>
+        <div class="flex-row">
+            <img src="./function3.png" alt="">
+            <button class="trapezoid">TRAPEZ</button>
+            <button class="simpson">SIMPSON</button>
+        </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 
